--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 #fire { 
-    text-align: center; 
+    text-align: center;  
+    background-color: green;
+} 
+
+#names { 
+    font-family: Arial, Helvetica, sans-serif; 
+    text-align: right;
 }
