--- a/style.css
+++ b/style.css
@@ -26,6 +26,20 @@ body {
     background: black; 
     color: white; 
 }
+ 
+#principal { 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;  
+    width: 40%; 
+}
+
+#funding { 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 40%; 
+}
 
 #teach { 
     width: 30%;  
@@ -39,6 +53,20 @@ body {
     display: block; 
     margin-left: auto; 
     margin-right: auto; 
+} 
+
+#signs { 
+    width: 30%;  
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+#timeChange { 
+    width: 30%;  
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;
 }
 
 .locations {  
@@ -56,4 +84,36 @@ body {
     font-size: 18px;  
     background: black; 
     color: white; 
+} 
+
+#paragraph3 { 
+    text-align: center;  
+    padding-bottom: 10px; 
+    font-size: 18px;  
+    background: black; 
+    color: white; 
+} 
+
+#paragraph4 { 
+    text-align: center;  
+    padding-bottom: 10px; 
+    font-size: 18px;  
+    background: black; 
+    color: white; 
+} 
+
+#paragraph5 { 
+    text-align: center;  
+    padding-bottom: 10px; 
+    font-size: 18px;  
+    background: black; 
+    color: white;  
+} 
+
+#paragraph6 { 
+    text-align: center;  
+    padding-bottom: 10px; 
+    font-size: 18px;  
+    background: black; 
+    color: white;  
 }
